--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -146,7 +146,7 @@
           <a class='float-left login-btn' id='login-btn' href='{% url webapp_login app_name %}'>{% trans 'Login' %}</a>
           <div id='login-box-container' class='hidden'>
             <a id='login-btn-facebook' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Login with Facebook" %}</span></a>
-            <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
+            <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
             <div class='login-separation-line'></div>
             <form id='popup-login-form' method='post' action="{% url webapp_login app_name %}">{% csrf_token %}
               <span>{% trans "Email login" %}</span>
