--- a/yaapp/templates/yabase/app/static/press.mustache
+++ b/yaapp/templates/yabase/app/static/press.mustache
@@ -1,6 +1,70 @@
 {% load i18n %}
-<div class='row'>
-    <div class='span12'>
-        <h2>{% trans "Press" %}</h2>
-    </div>
+<div class='row common-background'>
+    <div class='span12 no-margin'>
+        <h1>{% trans "Press" %}</h1>
+        <div class='separation-line'></div>
+
+
+        <div class="data" style="width: 680px;float:right;">
+            <p style="margin-top: 90px;">
+                {% trans "Address your inquiries to" %}  <a href="mailto:info@yasound.com">info@yasound.com</a>
+            </p>
+            <h3>{% trans "Logo" %}</h3>
+            <ul>
+                <li><a href="{% url download 'media/yaweb/presse/logo_Yasound.eps' %}">Format
+                        EPS</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/logo_Yasound.jpg' %}">Jpeg</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/logo_Yasound.png' %}">PNG</a></li>
+            </ul>
+            <h3>{% trans "High resolution photos" %}</h3>
+            <table width="660" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                    <td width="220" height="286" align="center" valign="middle"><a
+                        href="/media/yaweb/presse/jean-marc_plueger.tif"><img
+                            src="{% url download 'media/yaweb/presse/jean-marc_plueger.jpg' %}"
+                            alt="Jean-Marc Plueger" width="180" height="246" border="0" /></a><br />
+                        Jean-Marc Plueger</td>
+                    <td width="220" height="286" align="center" valign="middle"><a
+                        href="{% url download 'media/yaweb/presse/sebastien_metrot.tif' %}"><img
+                            src="/media/yaweb/presse/sebastien_metrot.jpg"
+                            alt="Sébastien Métrot" width="180" height="246" border="0" /></a><br />
+                        Sébastien Métrot</td>
+                    <td width="220" height="286" align="center" valign="middle"><a
+                        href="{% url download 'media/yaweb/presse/bureau.tif' %}"><img
+                            src="/media/yaweb/presse/bureau.jpg" alt="{% trans 'Workstation' %}" width="180"
+                            height="246" border="0" /></a><br /> {% trans 'Workstation' %}</td>
+                </tr>
+                <tr>
+                    <td width="220" height="200" align="center" valign="middle"><a
+                        href="{% url download 'media/yaweb/presse/studio.jpg' %}"><img
+                            src="/media/yaweb/presse/studiomini.jpg" alt="{% trans 'Office' %}"
+                            width="180" height="119" border="0" /></a><br /> {% trans 'Office' %}<br /></td>
+                    <td width="220" height="200" align="center" valign="middle">&nbsp;</td>
+                    <td width="220" height="200" align="center" valign="middle"><br /></td>
+                </tr>
+            </table>
+            <h3>{% trans "Press Releases" %}</h3>
+            <ul>
+                <li><a href="{% url download 'media/yaweb/presse/releases/1_corpo.pdf' %}">{% trans "Corporate" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/releases/2_app_launch.pdf' %}">{% trans "Launch" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/releases/3_new_version_twitter.pdf' %}">{% trans "New version" %}</a></li>
+            </ul>
+            <h3>{% trans "Press Reviews" %}</h3>
+            <ul>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201203_review_press_fr.pdf' %}">{% trans "Press review (march 2012)" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201203_review_blogs_fr.pdf' %}">{% trans "Weblogs review (march 2012)" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_press_fr.pdf' %}">{% trans "Press review (april 2012)" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201204_review_blogs_fr.pdf' %}">{% trans "Weblogs review (april 2012)" %}</a></li>
+                <li><a href="{% url download 'media/yaweb/presse/reviews/201205_review_press_blogs_fr.pdf' %}">{% trans "Press and weblogs review (may 2012)" %}</a></li>
+            </ul>
+            <p>&nbsp;</p>
+        </div>
+
+        <div class="data" style="margin-right: 25px; width: 204px;margin-left:25px;margin-top:48px;">
+            <img src="/media/app/images/static/press-bg.png" width="204" height="803px"
+                alt="Presse" />
+        </div>
+
+            </div>
+
 </div>
