--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -401,7 +401,7 @@ HTML, BODY { height: 100%; }
       <div class="navbar-inner">
         <div class="container">
       <div id="brand-logo" >
-				<a href="{% url webapp app_name %}" id='btn-webapp'>
+				<a href="{% app_url webapp app_name %}" id='btn-webapp'>
 					<img src="/media/app/images/yasound-logo.png" width="110" height="86" alt="Logo Yasound">
 				</a>
 			</div>
@@ -533,12 +533,12 @@ HTML, BODY { height: 100%; }
   <div class='container' id='teaser' style='display:none;'>
     <div class='row'>
       <div class='span4' id='teaser-listen'>
-          {% url webapp_top app_name as link %}
+          {% app_url webapp_top app_name as link %}
           {% blocktrans %}<p><a href='{{ link }}'>Listen</a> to the biggest radio database in the world</p>{% endblocktrans %}
           <img src='/media/app/images/teaser/listen.png' width='223' height='197'/>
       </div>
       <div class='span4' id='teaser-share'>
-          {% url webapp_friends app_name as link %}
+          {% app_url webapp_friends app_name as link %}
           {% blocktrans %}<p><a href='{{ link }}'>Share</a> your listening<br/>with your friends</p>{% endblocktrans %}
           <img src='/media/app/images/teaser/share.png' width='249' height='197'/>
       </div>
@@ -546,7 +546,7 @@ HTML, BODY { height: 100%; }
           <div id='close-btn-container'>
             <a id='close-btn' class="yabutton-small" href="#"><i class="icon-remove"></i> {% trans "Close" %}</a>
           </div>
-          {% url webapp_myradios app_name as link %}
+          {% app_url webapp_myradios app_name as link %}
           {% blocktrans %}<p><a href='{{ link }}'>Create</a> your radio <br/>easily</p>{% endblocktrans %}
           <img src='/media/app/images/teaser/create.png' width='196' height='197'/>
 
