--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load app_url %}
 {% if request.user.is_authenticated %}
 <div class='no-margin'>
     <ul id='results' class='radio-cells'>
@@ -12,7 +13,7 @@
 		<img class='favorites-login-large'src="/media/app/images/icon-star-big-blue.png" height='164' width='164'>
 		<img class='favorites-login-small' src="/media/app/images/icon-star-big-blue.png" height='100' width='100'>
 		<p class='favorites-login-p'>{% trans "Log in to view your favorites." %}</p>
-        <form action='{% url webapp_login app_name %}' method='get'>
+        <form action='{% app_url webapp_login app_name %}' method='get'>
 		<button id='login-btn'>{% trans "Login" %}</button>
         </form>
 	</div>
