--- a/yaapp/templates/yabase/app/footer.html
+++ b/yaapp/templates/yabase/app/footer.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load app_url %}
 <div class='container'>
     <footer>
         <div id="contacts" class="blocks">
@@ -13,24 +14,24 @@
                 </a>
             </p>
             <p>
-                <a id='btn-about' href="{% url webapp_about app_name %}"
+                <a id='btn-about' href="{% app_url webapp_about app_name %}"
                     class="footer-text-color1"
                     title="{% trans 'About' %}">{% trans 'About' %}</a> -
-                <a id='btn-help' href="{% url webapp_help app_name %}"
+                <a id='btn-help' href="{% app_url webapp_help app_name %}"
                     class="footer-text-color1"
                     title="{% trans 'Help' %}">{% trans "Help" %}</a>
             </p>
             <p>
-                <a id='btn-press' href="{% url webapp_press app_name %}"
+                <a id='btn-press' href="{% app_url webapp_press app_name %}"
                     class="footer-text-color1"
                     title="{% trans 'Press' %}">{% trans 'Press' %}</a> -
-                <a id='btn-jobs' href="{% url webapp_jobs app_name %}"
+                <a id='btn-jobs' href="{% app_url webapp_jobs app_name %}"
                     class="footer-text-color1"
                     title="{% trans 'Jobs' %}">{% trans "Jobs" %}</a>
             </p>
             <p>
-                <a id='btn-contact' href="{% url webapp_contact app_name %}" class="footer-text-color1" title="{% trans 'Contact' %}">{% trans "Contact" %}</a> -
-                <a id='btn-legal' href="{% url webapp_legal app_name %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
+                <a id='btn-contact' href="{% app_url webapp_contact app_name %}" class="footer-text-color1" title="{% trans 'Contact' %}">{% trans "Contact" %}</a> -
+                <a id='btn-legal' href="{% app_url webapp_legal app_name %}" class="footer-text-color1" title="{% trans 'Legal informations' %}">{% trans 'Legal informations' %}</a>
             </p>
         </div>
 
