--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load app_url %}
 {% if request.user.is_authenticated %}
 <div class="modal hide fade" id="modal-delete-radio">
     <div class="modal-header">
@@ -30,7 +31,7 @@
 <div class='row'>
     <div class='span12'>
         <div id='create-radio-container'>
-        <a class='yabutton-large' id='create-radio-btn' href='{% url webapp_new_radio app_name %}'>{% trans "Create radio" %}</a>
+        <a class='yabutton-large' id='create-radio-btn' href='{% app_url webapp_new_radio app_name %}'>{% trans "Create radio" %}</a>
         </div>
     </div>
 </div>
@@ -42,7 +43,7 @@
     <div class='favorites-login-container'>
         <img class='favorites-login-large'src="/media/app/images/teaser/create.png"'>
         <p class='favorites-login-p'>{% trans "Log in to create your radio." %}</p>
-        <form action='{% url webapp_login app_name %}' method='get'>
+        <form action='{% app_url webapp_login app_name %}' method='get'>
         <button id='login-btn'>{% trans "Login" %}</button>
         </form>
     </div>
