--- a/yaapp/templates/yabase/app/radioCell.html
+++ b/yaapp/templates/yabase/app/radioCell.html
@@ -1,11 +1,12 @@
 {% load i18n %}
+{% load app_url %}
 <div class='radio-cell'>
     <div class="radio-border" style='display:none;'>
         <img src="/media/app/images/radio/radio-hover-border.png" alt="Radio Hover Border">
     </div>
     <div class="radio-container">
         <div class='picture'>
-        <a href='{% url webapp_radio app_name radio.uuid %}'><img src='{{ radio.picture_url }}' width='210' height='210'/></a>
+        <a href='{% app_url webapp_radio app_name radio.uuid %}'><img src='{{ radio.picture_url }}' width='210' height='210'/></a>
         </div>
 
         <div class='mask' style='display:none;'>
