--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load app_url %}
 {% load thumbnail %}
 
 
@@ -28,7 +29,7 @@
         </div>
         <div id='player-title'>
             <div id="radio-picto">
-                <a href="{% url webapp_radio app_name current_uuid %}">
+                <a href="{% app_url webapp_radio app_name current_uuid %}">
 
                     {% if yasound_song %}
                     <img id='track-image' src='{% if yasound_song.cover_url %}{{ yasound_song.cover_url }}{% else %}{{ yasound_song.album.cover_url }}{% endif %}' width="32" height="32" alt="Radio Picto">
@@ -89,7 +90,7 @@
             <div id="profile-picture">
                {% if user_profile.picture %}
                    {% thumbnail user_profile.picture "28x28" format='PNG' as im %}
-                    <a href='{% url webapp_profile app_name request.user.username %}' class='yatooltip'>
+                    <a href='{% app_url webapp_profile app_name request.user.username %}' class='yatooltip'>
                         <img src="{{ im.url  }}" width="28" height="28" alt="Profile Picture"/>
            <div id='profile-box-container' class='hidden'>
             <div>
@@ -101,7 +102,7 @@
                     </a>
                    {% endthumbnail %}
                {% else %}
-                    <a href='{% url webapp_profile app_name request.user.username %}' class='yatooltip'>
+                    <a href='{% app_url webapp_profile app_name request.user.username %}' class='yatooltip'>
                         <img src="/media/images/default_image.png" width="28" height="28" alt="Profile Picture"/>
            <div id='profile-box-container' class='hidden'>
             <div>
@@ -117,7 +118,7 @@
 
             </div>
             <div>
-                <a id="messages-btn" class="header-notification yatooltip" href="{% url webapp_notifications app_name %}">
+                <a id="messages-btn" class="header-notification yatooltip" href="{% app_url webapp_notifications app_name %}">
                     <span class="badge badge-info {% ifequal notification_count 0 %}hidden{% endifequal %}" id="message-position-absolute">{{ notification_count }}</span>
                 </a>
             </div>
@@ -141,14 +142,14 @@
             </div>
             {% else %}
             <div id='login'>
-              <a class='float-left' id='signup-btn' href='{% url webapp_signup app_name %}'>{% trans 'Signup' %}</a>
+              <a class='float-left' id='signup-btn' href='{% app_url webapp_signup app_name %}'>{% trans 'Signup' %}</a>
           <div class="header-separation"><img src="/media/app/images/header-separation.png" width="4" height="54" alt="Header Separation"></div>
-          <a class='float-left login-btn' id='login-btn' href='{% url webapp_login app_name %}'>{% trans 'Login' %}</a>
+          <a class='float-left login-btn' id='login-btn' href='{% app_url webapp_login app_name %}'>{% trans 'Login' %}</a>
           <div id='login-box-container' class='hidden'>
             <a id='login-btn-facebook' href="{% url socialauth_begin 'facebook' %}?next={{ root }}" rel="nofollow"><img src="/media/app/images/login/login-icon-facebook.png"><span>{% trans "Login with Facebook" %}</span></a>
             <a id='login-btn-twitter' href="{% url socialauth_begin 'twitter' %}?next={{ root }}{{ next }}" rel="nofollow"><img src="/media/app/images/login/login-icon-twitter.png"><span>{% trans "Login with Twitter" %}</span></a>
             <div class='login-separation-line'></div>
-            <form id='popup-login-form' method='post' action="{% url webapp_login app_name %}">{% csrf_token %}
+            <form id='popup-login-form' method='post' action="{% app_url webapp_login app_name %}">{% csrf_token %}
               <span>{% trans "Email login" %}</span>
               <input placeholder="{% trans 'Email' %}" type="email" required="required" name="email">
               <input placeholder="{% trans 'Password' %}"class="right-input" required="required" type="password" name="password">
