--- a/yaapp/templates/yabase/app/common/subMenu.mustache
+++ b/yaapp/templates/yabase/app/common/subMenu.mustache
@@ -59,7 +59,7 @@
             </a>
             {% endif %}
         	<div id="search-bar">
-				<input type="text" id="search-input" class="unstyle" placeholder="Rechercher"/>
+				<input type="text" id="search-input" class="unstyle" placeholder="Rechercher" maxlength="25"/>
 				<input type="submit" value="" id="search-symbol" class="unstyle"/>
         	</div>
     </div>
