--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3780,9 +3780,32 @@ ul .radio-with-stats-cells li {
     width:100%;
     margin-bottom:12px;
 }
+
+#modal-invite-email #recipients-group {
+    width:100%;
+    clear: both;
+    margin-left:6px;
+}
+
+#modal-invite-email #recipients-group input {
+    width:83%;
+    margin-top:4px;
+    float:right;
+}
+
+#modal-invite-email #recipients-group button {
+    width:15%;
+    float:left;
+    margin-left:-6px;
+}
+
 #modal-invite-email textarea {
     width:100%;
     height:80px;
+}
+
+#google-contacts-list tr {
+    cursor: pointer;
 }
 
 /**
