--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -4240,6 +4240,15 @@ a.yabutton-small {
     border-left: 1px solid #e3e3e3;
 }
 
+#programming-toolbar > .active >a {
+    border-bottom-color: #DDD;
+    background: url('../app/images/programming/programming-toolbar-bg.png') repeat-x;
+    padding-left:1px;
+}
+
+#programming-toolbar .active {
+}
+
 
 
 /* Landscape phones and down */
