--- a/yaapp/templates/yabase/app/programming/addFromServer.mustache
+++ b/yaapp/templates/yabase/app/programming/addFromServer.mustache
@@ -9,9 +9,9 @@
 </form>
 
 <form class="well form-inline" style="display:none" id='advanced-search'>
-    <input type='text' id='find-track-input' placeholder='{% trans "Track" %}'/>
-    <input type='text' id='find-album-input' class='input-small' placeholder='{% trans "Album" %}'/>
-    <input type='text' id='find-artist-input' placeholder='{% trans "Artist" %}'/>
+    <input type='text' id='find-track-input' class='input-medium' placeholder='{% trans "Track" %}'/>
+    <input type='text' id='find-album-input' class='input-medium' placeholder='{% trans "Album" %}'/>
+    <input type='text' id='find-artist-input' class='input-medium' placeholder='{% trans "Artist" %}'/>
     <input type='submit' class='yabutton-small' id='find-btn' value='{% trans 'find' %}'/>
 </form>
 
