--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2472,7 +2472,9 @@ ul#notifications {
     width:100%;
 }
 
-.programming #playlist-actions {
+.programming #playlist-actions,
+.programming #upload-actions
+ {
     margin-bottom: 8px;
 }
 
