auto start upload

--- a/yaapp/templates/yabase/app/programming/upload.mustache
+++ b/yaapp/templates/yabase/app/programming/upload.mustache
@@ -2,7 +2,7 @@
 <div>
     <input id="file-upload" type="file" name="song" data-url="/api/v1/upload_song/" multiple>
 
-    <div class="btn-group">
+    <div class="btn-group" id='upload-actions'>
         <button class='yabutton-small left hide' id='start-all-btn'>{% trans "Start all" %}</button>
         <button class='yabutton-small left hide' id='stop-all-btn'>{% trans "Stop all" %}</button>
         <button class='yabutton-small left hide' id='remove-all-btn'>{% trans "Remove all" %}</button>
