--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -525,7 +525,8 @@ HTML, BODY { height: 100%; }
         </p>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+        <a href="#" class="btn btn-cancel" data-dismiss="modal">{% trans "Cancel" %}</a>
+        <a href="#" class="btn btn-primary" data-dismiss="modal">{% trans "Close" %}</a>
     </div>
 </div>
 
