--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -333,6 +333,8 @@ body {
     border-radius:5px;
     box-shadow:0px 0px 2px grey inset;
     padding:12px;
+    overflow:scroll;
+    max-height:450px;
 }
 
 
