--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -75,6 +75,8 @@ HTML, BODY { height: 100%; }
     <link rel="stylesheet" href="/media/js/chosen/chosen.css"/>
     <link rel="stylesheet" href="/media/css/bootstrap-toggle-buttons.css"/>
 
+    <link rel="stylesheet" href="/media/datepicker/css/datepicker.css"/>
+
     <link rel="stylesheet" href="/media/css/webapp.css"/>
     {% endcompress %}
 
@@ -104,6 +106,8 @@ HTML, BODY { height: 100%; }
     <script language="javascript" type="text/javascript" src="/media/js/flot/jquery.flot.resize.js"></script>
     <script src="/media/js/jquery.toggle.buttons.js" type="text/javascript"></script>
     <script src="/media/js/jquery.uniform.js" type="text/javascript"></script>
+    <script src="/media/datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
+    <script src="/media/datepicker/js/locales/bootstrap-datepicker.fr.js" type="text/javascript" charset="UTF-8"></script>
 {% endcompress %}
 
   <script src="https://apis.google.com/js/client.js"></script>
