--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -10,12 +10,35 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="icon" type="image/png" href="/media/app/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel." />
     <meta name="Author" content="Yasound SAS" />
     <meta name="copyright" content="Yasound SAS" />
     <meta http-equiv="Cache-control" content="public" />
     <meta name="language" content="french" />
     <meta name="format-detection" content="telephone=no">
+
+
+<!--[if lt IE 9]>
+    <script type="text/javascript"
+     src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+
+    <style>
+     .chromeFrameInstallDefaultStyle {
+       width: 100%; /* default is 800px */
+       border: 5px solid blue;
+     }
+    </style>
+
+    <script>
+     window.attachEvent("onload", function() {
+       CFInstall.check({
+          mode: "overlay"
+       });
+     });
+    </script>
+<![endif]-->
+
 
 <!--[if lt IE 9]>
 <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
@@ -373,11 +396,14 @@ HTML, BODY { height: 100%; }
 <span id="loading-message">{% trans "Loading application..." %}</span>
 </div>
 
+<!--[if ! lt IE 9]>
 <script type="text/javascript">
     document.getElementById('loading-message').innerHTML = "{% trans 'Yasound' %}";
+
     document.getElementById('loading-mask').style.removeProperty("display");
     document.getElementById('loading').style.removeProperty("display");
 </script>
+<![endif]-->
 
 {% block body %}
 
