--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3880,6 +3880,7 @@ ul#gifts {
 .gift-container img {
     float: left;
     margin-right:12px;
+    width:32px;
 }
 
 
@@ -3888,7 +3889,7 @@ ul#gifts {
     margin-right:12px;
 }
 
-.gift-container a {
+.gift a {
     text-decoration: none;
     color: #999;
 }
