--- a/yaapp/templates/yabase/app/gifts/gift.mustache
+++ b/yaapp/templates/yabase/app/gifts/gift.mustache
@@ -2,7 +2,7 @@
     <%#enabled %>
     <a href='<% action_url %>'
         <%#ajax_url%>data-ajax-url='<%ajax_url%>'<%/ajax_url%>
-        <%#target%>target='<%target%>'<%/target%>
+        target='_blank'
         <%#completed_url%>data-completed-url='<%completed_url%>'<%/completed_url%>
     >
 <div class='gift-container'>
