fixed title shift when too long

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1717,8 +1717,13 @@ input::-webkit-input-placeholder {
 }
 
 #player #player-title span {
-    width:330px;
+    width: 328px;
+    display: inline-block;
+    overflow: hidden;
+    height: 20px;
+    text-overflow: ellipsis
 }
+
 #player #player-title span:hover {
     color: #D5D7D8;
 }
