--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -564,6 +564,7 @@ HTML, BODY { height: 100%; }
 
 <div id='webapp-container-parent'>
 <div id='webapp-container'>
+  <div id='selected-genre' style='display:none;'><span>Genre selectionné<span></div>
   {% include "yabase/app/mobileLeftMenu.html" %}
   {% include "yabase/app/mobileCenterMenu.html" %}
 
