added likes list

--- a/yaapp/templates/yabase/app/profile/profilePage.mustache
+++ b/yaapp/templates/yabase/app/profile/profilePage.mustache
@@ -34,6 +34,14 @@
     <h2 class='zone-title'>{% trans "People following you" %} (<span class='followers-count'>0</span>)</h2>
     <ul class='' id='followers'>
     </ul>
+    <div class='separation-line'></div>
+  </div>
+
+  <div class='span12 no-margin' id='likes-zone'>
+    <button class='yabutton right' id='likes-btn'>{% trans 'All liked tracks' %}</button>
+    <h2 class='zone-title'>{% trans "Tracks you liked" %}</h2>
+    <ul class='radio-cells' id='likes'>
+    </ul>
   </div>
 
 </div>
