--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -216,6 +216,9 @@ HTML, BODY { height: 100%; }
    <script type='text/html' id='profilePageTemplate'>
      {% include "yabase/app/profile/profilePage.mustache" %}
    </script>
+   <script type='text/html' id='likeCellTemplate'>
+     {% include "yabase/app/profile/likeCell.mustache" %}
+   </script>
    <script type='text/html' id='userTemplate'>
      {% include "yabase/app/profile/user.mustache" %}
    </script>
@@ -284,6 +287,9 @@ HTML, BODY { height: 100%; }
    </script>
    <script type='text/html' id='userFollowersPageTemplate'>
      {% include "yabase/app/friends/userFollowersPage.mustache" %}
+   </script>
+   <script type='text/html' id='userLikesPageTemplate'>
+     {% include "yabase/app/profile/userLikesPage.mustache" %}
    </script>
    <script type='text/html' id='userRadiosPageTemplate'>
      {% include "yabase/app/radio/userRadiosPage.mustache" %}
