--- a/yaapp/templates/yabase/app/friends/userFollowersPage.mustache
+++ b/yaapp/templates/yabase/app/friends/userFollowersPage.mustache
@@ -4,7 +4,7 @@
   </div>
 <div class='span12 no-margin'>
     <button class='yabutton right' id='back-btn'>{% trans 'Back to profile' %}</button>
-    <h2 class='zone-title'>{% trans "Followers" %}</h2>
+    <h2 class='zone-title'>{% trans "Followed by" %}</h2>
     <ul id='results'>
     </ul>
     <img class='loading-mask' src='/media/images/loading-white.gif'/>
